# papershop

./: .gitignore  README.md  bootstrap.sh  flake.nix
agents/: worklog.md
performance-engineering/skills/performance-engineering/modules/measure/harness/: .gitignore  CLAUDE.md  METHODOLOGY.md  README.md  pyproject.toml
performance-engineering/skills/performance-engineering/modules/measure/harness/experiments/approx_correctness/: run.py  target.py
performance-engineering/skills/performance-engineering/modules/measure/harness/experiments/batch_homogeneity/: run.py  target.py
performance-engineering/skills/performance-engineering/modules/measure/harness/experiments/cli_search/: run.py  target.py
performance-engineering/skills/performance-engineering/modules/measure/harness/experiments/fixes_verify/: run.py
performance-engineering/skills/performance-engineering/modules/measure/harness/experiments/iid_bootstrap/: run.py  target.py
performance-engineering/skills/performance-engineering/modules/measure/harness/experiments/mem_metric/: run.py  target.py
performance-engineering/skills/performance-engineering/modules/measure/harness/experiments/membership/: run.py  target.py
performance-engineering/skills/performance-engineering/modules/measure/harness/experiments/nonlinear_batch/: run.py  target.py
performance-engineering/skills/performance-engineering/modules/measure/harness/experiments/provenance/: run.py  target.py
performance-engineering/skills/performance-engineering/modules/measure/harness/research/: CLAIMS.md  LOG.md  LOOP.md  THEORY.md  research_loop.js
(+102 files in other folders)
