[project]
name = "performance-eval-harness"
version = "0.1.0"
description = "A small, generalizable harness for invoking code, measuring it fairly, and plotting the result"
requires-python = ">=3.11"
dependencies = ["matplotlib>=3.8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]
